<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Constellate</string>
    <string name="hello_world">A wild change appeared!</string>
    <string name="action_settings">Settings</string>
    <string name="explore">Explore</string>
    <string name="collection">Collection</string>
    <string name="title_activity_explore">Explore</string>
    <string name="title_activity_collection">Collection</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="logout_button">Logout</string>
    <string name="my_collections">My Constellations</string>
    <string name="constellations">Constellations</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_username">Desired Username</string>
    <string name="register_email">Email Address</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="register">Register</string>
</resources>
